Added "contacs" section classes

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
             <img src="img/photo.jpeg" alt="Profile photo">
 
             <!--Contacts section-->
-            <section>
-                  <h2>Contacs</h2>
+            <section class="contacs">
+                  <h2 class="contacts-title">Contacs</h2>
 
-                  <ul>
-                        <li>Phone: <a class="link" href="tel:+573183992225">+57 3183992225</a></li>
-                        <li>Email: <a class="link" href="mailto:kvillamizar196@gmail.com">kvillamizar196@gmail.com</a> </li>
+                  <ul calss="contacs-list">
+                        <li class="contacs-item">Phone: <a class="link" href="tel:+573183992225">+57 3183992225</a></li>
+                        <li class="contacs-item">Email: <a class="link" href="mailto:kvillamizar196@gmail.com">kvillamizar196@gmail.com</a> </li>
                   </ul>
             </section>
 
