--- a/index.html
+++ b/index.html
@@ -23,15 +23,15 @@
             </section>
 
             <!--Tech skills section-->
-            <section>
-                  <h2>Tech skills</h2>
-                  <ul>
-                        <li>HTML</li>
-                        <li>CSS</li>
-                        <li>Git</li>
-                        <li>JavaScript</li>
-                        <li>React</li>
-                        <li>Node.js</li>
+            <section class="tech-skills">
+                  <h2 class="tech-skills-title">Tech skills</h2>
+                  <ul class="tech-skills-list">
+                        <li class="tech-skills-item">HTML</li>
+                        <li class="tech-skills-item">CSS</li>
+                        <li class="tech-skills-item">Git</li>
+                        <li class="tech-skills-item">JavaScript</li>
+                        <li class="tech-skills-item">React</li>
+                        <li class="tech-skills-item">Node.js</li>
                   </ul>
             </section>
 
