Added "soft-skills" section classes

--- a/index.html
+++ b/index.html
@@ -36,13 +36,13 @@
             </section>
 
             <!--Soft skills section-->
-            <section>
-                  <h2>Soft skills</h2>
-                  <ul>
-                        <li>Scrum</li>
-                        <li>Agile</li>
-                        <li>CTD</li>
-                        <li>Teamwork</li>
+            <section class="soft-skills">
+                  <h2 class="soft-skills-title">Soft skills</h2>
+                  <ul class="soft-skills-list">
+                        <li class="soft-skills-item">Scrum</li>
+                        <li class="soft-skills-item">Agile</li>
+                        <li class="soft-skills-item">CTD</li>
+                        <li class="soft-skills-item">Teamwork</li>
                   </ul>
             </section>
       </aside>
