--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
+      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>My resume</title>
 <!--Conexión con el archivo de estilo css-->
 <link rel="stylesheet" href="css/style.css">
 <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +23,7 @@
 
                   <ul class="contacts-list">
                         <li class="contacts-item">Phone: <a class="contacts-link" href="tel:+573183992225">+57
-                                    3183992225</a></li>
+                              3183992225</a></li>
                         <li class="contacts-item">Email: <a class="contacts-link"
                                     href="mailto:kvillamizar196@gmail.com">kvillamizar196@gmail.com</a> </li>
                   </ul>
